test: run missing test for PDFBox